# base_project

./: .env.example  .gitignore  README.md  base_project.code-workspace  neopulse-design.md  pyproject.toml  requirements.txt
.github/skills/add-feature/: SKILL.md
.github/skills/api-routes/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/database-setup/: SKILL.md
.github/skills/extend-base-project/: SKILL.md
.github/skills/neopulse-esp32/: SKILL.md
.github/skills/testing-patterns/: SKILL.md
.github/skills/walt-disney-method/: SKILL.md
config/: app.toml
docs/: coding_guide.md
neopulse/: README.md  neopulse_cli.py  test_neopulse.py  upload_firmware.sh
neopulse/desktop/: app.py  main.py
neopulse/desktop/esp/: __init__.py  connection.py  flasher.py  mdns_discovery.py
neopulse/desktop/models/: __init__.py  effect.py  keyframe.py  scene.py  show.py
neopulse/desktop/widgets/: __init__.py  color_picker.py  pixel_preview.py  scene_tree.py  timeline.py
neopulse/desktop/windows/: __init__.py  live_control.py  project_manager.py  setup_wizard.py  show_editor.py
neopulse/emulator/: index.html
neopulse/esp32-firmware/: animation_engine.py  boot.py  config.py  do_upload.py  main.py  neopixel_driver.py  server.py  setup_esp.py  upload_fast.py
neopulse/esp32-firmware/effects/: __init__.py  breathing.py  emergency_de.py  emergency_us.py  fire.py  rainbow.py  strobe.py
neopulse/esp32-firmware/web/: index.html
neopulse/esp32-firmware/web/js/: app.js  (+1 more)
src/base_project/: __init__.py  config.py  main.py  service.py
tests/: test_service.py
(+1 files in other folders)
